--- a/about-us.html
+++ b/about-us.html
@@ -94,7 +94,7 @@
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 7th May, 1999</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 08161219675</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> asogwaezemich126@gmail.com</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i>Meetmike1@gmail.com</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i>Enugu, Nigeria</a></li>
 									</ul>
 									<ul class="list personal_social">
@@ -118,7 +118,9 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+        					<p>
+							I'm  skilled developer and designer with a passion for creating innovative digital solutions. With expertise in both front-end and back-end development, I craft seamless user experiences and visually stunning interfaces. My design philosophy focuses on simplicity, functionality, and aesthetics, ensuring that every project I undertake is both effective and engaging. 
+						</p>
         					<div class="row">
         						<div class="col-md-4">
         							<div class="wel_item">
@@ -207,7 +209,7 @@
         					</div>
         					<p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills,</p>
         					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved.<i class="fa fa-heart-o" aria-hidden="true"></i></a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
         				</aside>
         			</div>
