--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
-        					<div class="row">
+        					<p>
+							I'm  skilled developer and designer with a passion for creating innovative digital solutions. With expertise in both front-end and back-end development, I craft seamless user experiences and visually stunning interfaces. My design philosophy focuses on simplicity, functionality, and aesthetics, ensuring that every project I undertake is both effective and engaging. 
+						</p>
         						<div class="col-md-4">
         							<div class="wel_item">
         								<i class="lnr lnr-database"></i>
