--- a/about-us.html
+++ b/about-us.html
@@ -94,7 +94,7 @@
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 7th May, 1999</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 08161219675</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i>Meetmike1@gmail.com</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i>Asogwaezemich122@gmail.com</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i>Enugu, Nigeria</a></li>
 									</ul>
 									<ul class="list personal_social">
