--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
                             </div>
                             <div class="info_item">
                                 <i class="lnr lnr-envelope"></i>
-                                <h6><a href="#">Meetmike1@gmail.com</a></h6>
+                                <h6><a href="#">Asogwaezemich122@gmail.com</a></h6>
                                 <p>Send us your query anytime!</p>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
         					</div>
         					<p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills,</p>
         					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
         				</aside>
         			</div>
@@ -166,9 +166,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         					<p>Let us be social</p>
         					<ul class="list">
         						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        						<li><a href="#"><i class="fa fa-behance"></i></a></li>
+        						<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        						<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        					
         					</ul>
         				</aside>
         			</div>
