--- a/portfolio.html
+++ b/portfolio.html
@@ -214,10 +214,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         					<p>Let us be social</p>
         					<ul class="list">
         						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        						<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-        						<li><a href="#"><i class="fa fa-behance"></i></a></li>
-        					</ul>
+        						<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+        						<li><a href="#"><i class="fa fa-instagram"></i></a></li></ul>
         				</aside>
         			</div>
         		</div>
