--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 										<li><a href="#"><i class="lnr lnr-home"></i>Enugu, Nigeria</a></li>
 									</ul>
 									<ul class="list personal_social">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+										<li><a href="https://wa.me/09060025159"><i class="fa fa-whatsapp"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
