--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="https://wa.me/09060025159"><i class="fa fa-whatsapp"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+										<li><a href="https://ig.me/m/meetmike1"><i class="fa fa-instagram"></i></a></li>
 										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
