--- a/contact.html
+++ b/contact.html
@@ -165,9 +165,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         					</div>
         					<p>Let us be social</p>
         					<ul class="list">
-        						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        						<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-        						<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        						<li><a href="https://wa.me/09060025159"><i class="fa fa-whatsapp"></i></a></li>
+										<li><a href="https://ig.me/m/meetmike1"><i class="fa fa-instagram"></i></a></li>
+										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
         					
         					</ul>
         				</aside>
