--- a/about-us.html
+++ b/about-us.html
@@ -83,7 +83,7 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/personal.jpg" alt="">
+								<img src="img/gggg.jpg" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
@@ -98,8 +98,8 @@
 										<li><a href="#"><i class="lnr lnr-home"></i>Enugu, Nigeria</a></li>
 									</ul>
 									<ul class="list personal_social">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+										<li><a href="https://wa.me/09060025159"><i class="fa fa-whatsapp"></i></a></li>
+										<li><a href="https://ig.me/m/meetmike1"><i class="fa fa-instagram"></i></a></li>
 										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
