--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         			</div>
         		</div>
         		<div class="more_btn">
-        			<a class="main_btn" href="#">Load More Items</a>
+        			<a class="main_btn" href="portfolio.html">Load More Items</a>
         		</div>
         	</div>
         </section>
